--- a/src/app/core/components/hike-detail/hike-detail.component.html
+++ b/src/app/core/components/hike-detail/hike-detail.component.html
@@ -17,13 +17,13 @@
   </ion-row>
   <ion-row>
     <ion-col class="ion-text-center">
-      <ion-label>{{ hike.hikeStats.duration | formatDuration }}</ion-label>
+      <ion-label>{{ hike.stats.duration | formatDuration }}</ion-label>
     </ion-col>
     <ion-col class="ion-text-center">
-      <ion-label>{{ hike.hikeStats.lowestPoint }} m</ion-label>
+      <ion-label>{{ hike.stats.lowestPoint }} m</ion-label>
     </ion-col>
     <ion-col class="ion-text-center">
-      <ion-label>{{ hike.hikeStats.highestPoint }} m</ion-label>
+      <ion-label>{{ hike.stats.highestPoint }} m</ion-label>
     </ion-col>
   </ion-row>
 </ion-grid>
@@ -34,7 +34,7 @@
       <ion-icon name="navigate-circle-outline" class="bigger-icon"></ion-icon>
     </ion-col>
     <ion-col>
-      {{ hike.hikeLocation.address | fullAddress }}
+      {{ hike.location.address | fullAddress }}
     </ion-col>
   </ion-row>
 
@@ -43,7 +43,7 @@
       <ion-icon name="compass-outline" class="bigger-icon"></ion-icon>
     </ion-col>
     <ion-col class="ion-align-self-center">
-      {{ hike.hikeLocation.coordinates | coordinates }}
+      {{ hike.location.coordinates | coordinates }}
     </ion-col>
   </ion-row>
 </ion-grid>
