--- a/src/app/pages/modals/picture-modal/picture-modal.page.html
+++ b/src/app/pages/modals/picture-modal/picture-modal.page.html
@@ -15,7 +15,7 @@
       <ion-grid>
         <ion-row class="ion-justify-content-center">
           <ion-col>
-            <img [src]="picture.storageUrl | getDownloadURL" [alt]="picture.altText"/>
+            <ion-img [src]="picture.storageUrl | getDownloadURL" [alt]="picture.altText"></ion-img>
           </ion-col>
         </ion-row>
         <ion-row class="ion-justify-content-center">
