added email to author model

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -13,7 +13,7 @@
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Email</ion-label>
-        <ion-input [(ngModel)]="email" name="email" minlength="6" maxlength="50" email required="true"></ion-input>
+        <ion-input [(ngModel)]="author.email" name="email" minlength="6" maxlength="50" email required="true"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Password</ion-label>
