--- a/src/app/core/components/hike-detail/hike-detail.component.html
+++ b/src/app/core/components/hike-detail/hike-detail.component.html
@@ -1,4 +1,5 @@
 <h1>{{ hike.title }}</h1>
+<p>von {{ hike.author.name }}</p>
 <p>{{ hike.shortDescription }}</p>
 
 <app-picture-collection [pictureCollection]="hike.pictureCollection"></app-picture-collection>
