--- a/src/app/pages/modals/share-modal/share-modal.page.html
+++ b/src/app/pages/modals/share-modal/share-modal.page.html
@@ -11,17 +11,19 @@
 
 <ion-content>
   <ion-list *ngIf="friends">
-    <form (ngSubmit)="share(form)" #form="ngForm">
-      <ion-list-header>Friends</ion-list-header>
-      <ion-item *ngFor="let friend of friends">
-        <ion-checkbox slot="start" color="tertiary" [id]="friend.authorId"></ion-checkbox>
-        <ion-label>{{ friend.name }}</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-button type="submit" color="success">
-          share
-        </ion-button>
-      </ion-item>
+    <form [formGroup]="shareForm" (ngSubmit)="share()">
+      <ng-container formArrayName="friendsSelection">
+        <ion-list-header>Friends</ion-list-header>
+        <ion-item *ngFor="let friend of friends; let i = index">
+          <ion-checkbox slot="start" color="tertiary" [formControlName]="i"></ion-checkbox>
+          <ion-label>{{ friend.name }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-button type="submit" color="success" expand="full">
+            share
+          </ion-button>
+        </ion-item>
+      </ng-container>
     </form>
   </ion-list>
 
