--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -19,7 +19,8 @@
   <ion-grid>
     <ion-row>
       <ion-col size="10">
-        <ion-searchbar [(ngModel)]="searchTerm" debounce="700"></ion-searchbar>
+        <ion-searchbar [(ngModel)]="searchTerm" debounce="700"
+                       placeholder="search title, city, street, author"></ion-searchbar>
       </ion-col>
       <ion-col size="2" class="ion-align-self-center">
         <ion-button (click)="showFilterModal()" fill="clear" color="success">
