--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -20,7 +20,7 @@
     <ion-row>
       <ion-col size="10">
         <ion-searchbar [(ngModel)]="searchTerm" debounce="700"
-                       placeholder="search title, city, street, author"></ion-searchbar>
+                       placeholder="Search title, city, street, author"></ion-searchbar>
       </ion-col>
       <ion-col size="2" class="ion-align-self-center">
         <ion-button (click)="showFilterModal()" fill="clear" color="success">
