add author name to hike-collection-card

--- a/src/app/core/components/hike-collection/hike-collection.component.html
+++ b/src/app/core/components/hike-collection/hike-collection.component.html
@@ -7,11 +7,6 @@
 
 <ng-container *ngIf="hikeCollection">
   <ion-card *ngFor="let hike of hikeCollection" [routerLink]="['/detail/' + hike.hikeId]">
-    <ion-item *ngIf="hike.author.authorId !== authorService.getAuthor().authorId">
-      <ion-badge color="tertiary" slot="end">
-        <ion-icon name="share-social-outline"></ion-icon>
-      </ion-badge>
-    </ion-item>
     <app-picture-collection [pictureCollection]="hike.pictureCollection"></app-picture-collection>
     <ion-card-header>
       <ion-card-subtitle>{{ hike.location.address.city }}</ion-card-subtitle>
@@ -19,6 +14,12 @@
     </ion-card-header>
     <ion-card-content>
       {{ hike.shortDescription }}
+      <p>
+        <ion-text *ngIf="hike.author.authorId !== authorService.getAuthor().authorId" color="tertiary">
+          by {{ hike.author.name }}
+        </ion-text>
+      </p>
     </ion-card-content>
+
   </ion-card>
 </ng-container>
