change loadingSpinner from configService to loadingSpinnerService

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <app-menu></app-menu>
-  <div class="spinner-container" *ngIf="configService.isLoading">
+  <div class="spinner-container" *ngIf="loadingSpinnerService.isLoading">
     <ion-spinner name="crescent"
                  duration="1000"
                  color="tertiary"
