--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -2,13 +2,14 @@
   <ion-toolbar>
     <ion-back-button text="" slot="start" color="success"></ion-back-button>
     <ion-title>Details</ion-title>
-    <ion-button slot="end" fill="clear" [routerLink]="['/edit/' + hikeId]" color="success">
+    <ion-button *ngIf="hike && hike.author.authorId === authorService.getAuthor().authorId" [routerLink]="['/edit/' + hikeId]"
+                slot="end" fill="clear" color="success">
       <ion-icon name="pencil-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen class="ion-padding-horizontal">
+<ion-content fullscreen="true" class="ion-padding-horizontal">
   <ng-container *ngIf="hike">
     <h1>{{ hike.title }}</h1>
     <p class="ion-text-right ion-text">
