--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,6 +6,14 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid class="ion-padding-bottom">
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="8">
+        <ion-img src="assets/logo.svg" [routerLink]="['/']"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <form (ngSubmit)="login()" #form="ngForm">
     <ion-card>
       <ion-item>
