--- a/src/app/core/components/menu/menu.component.html
+++ b/src/app/core/components/menu/menu.component.html
@@ -6,21 +6,13 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item [routerLink]="['/new']">
+      <ion-item [routerLink]="['/new']" (click)="menu.close()">
         <ion-icon name="add-outline" slot="start"></ion-icon>
         <ion-label>Add hike</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/import']">
-        <ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
-        <ion-label>Import hike</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="heart-outline" slot="start"></ion-icon>
-        <ion-label>Favorites</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="people-outline" slot="start"></ion-icon>
-        <ion-label>Friends</ion-label>
+      <ion-item [routerLink]="['/author']" (click)="menu.close()">
+        <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        <ion-label>Your profile</ion-label>
       </ion-item>
     </ion-list>
     <ion-img src="assets/logo.svg"></ion-img>
