--- a/src/app/core/components/hike-form/hike-form.component.html
+++ b/src/app/core/components/hike-form/hike-form.component.html
@@ -22,19 +22,19 @@
     <ion-list>
       <ion-list-header>Location</ion-list-header>
       <ion-item>
-        <ion-icon name="navigate-circle-outline" slot="start"></ion-icon>
+        <ion-icon name="storefront-outline" slot="start"></ion-icon>
         <ion-label position="stacked">Street</ion-label>
         <ion-input type="text" name="street" [(ngModel)]="hike.location.address.street" minlength="3"
                    required="true"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-icon name="navigate-circle-outline" slot="start"></ion-icon>
+        <ion-icon name="navigate-outline" slot="start"></ion-icon>
         <ion-label position="stacked">ZIP</ion-label>
         <ion-input type="number" name="zip" [(ngModel)]="hike.location.address.zip" min="1000" max="9999"
                    required="true"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-icon name="navigate-circle-outline" slot="start"></ion-icon>
+        <ion-icon name="business-outline" slot="start"></ion-icon>
         <ion-label position="stacked">City</ion-label>
         <ion-input type="text" name="city" [(ngModel)]="hike.location.address.city" minlength="2"
                    required="true"></ion-input>
