--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -27,7 +27,7 @@
     <ion-list>
       <ion-list-header>Location</ion-list-header>
       <ion-item>
-        <ion-icon name="navigate-circle-outline" slot="start"></ion-icon>
+        <ion-icon name="navigate-outline" slot="start"></ion-icon>
         <ion-label class="ion-text-wrap">
           <p>{{ hike.location.address | fullAddress }}</p>
         </ion-label>
