add unsubscribe to params subscription

--- a/src/app/pages/add-friend/add-friend.page.html
+++ b/src/app/pages/add-friend/add-friend.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>add-friend</ion-title>
+    <ion-title>Add a friend</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-img src="../../../assets/friends.svg"></ion-img>
+  <h4 class="ion-text-center">Adding a friend to your friendslist!...</h4>
+  <p class="ion-text-center">
+    <ion-button [routerLink]="['/']" color="tertiary">Home</ion-button>
+  </p>
 </ion-content>
